# n-ary_notebooks

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
notebooks/: 01-sum-check-protocol.ipynb  02-multilinear-extensions.ipynb  03-arithmetic-circuits.ipynb  04-gkr-protocol.ipynb
src/gkr/: __init__.py  _env.py  ac.py  gkr.py  mle.py  sumcheck.py
src/gkr/utils/: __init__.py  decorators.py  display.py  polynomials.py  tree.py
src/zknotes/: _ansi.py  _cli.py  _env.py  arithmetic_circuits.py  multilinear_extensions.py  sum_check.py  terminal_output.py  utils.py
